# tedd-eh

./: .gitignore  .output.txt  LICENSE  Makefile  README.md
.plan/: 01-project-overview.md  02-hardware-specification.md  03-server-architecture.md  04-client-architecture.md  05-web-interface.md  06-audio-pipeline.md  07-video-pipeline.md  08-conversation-engine.md  09-multi-doll-orchestration.md  10-development-roadmap.md
teddy-server/: README.md  pyproject.toml
teddy-server/src/teddy_server/: main.py  mock_client.py
teddy-server/src/teddy_server/api/: routes.py
teddy-server/src/teddy_server/core/: doll_registry.py  session_manager.py
teddy-server/src/teddy_server/models/: doll.py  events.py  session.py
teddy-server/src/teddy_server/services/: __init__.py  websocket_handler.py
teddy-server/src/teddy_server/static/: app.js  index.html  style.css
teddy-server/tests/: test_api.py  test_doll_registry.py  test_models.py  test_session_manager.py
